# Enterprise-KnowledgeBase

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  WORKBENCH_RAGFLOW_FRONTEND_PLAN.md  opencode.json  package-lock.json  pyproject.toml  pytest.ini  spec1.md
services/admin/: .env.example  AGENTS.md  README.md  admin.md  api.md  pyproject.toml  requirements.md
services/admin/src/admin_service/: __init__.py  config.py  database.py  deps.py  errors.py  main.py
services/admin/src/admin_service/api_key_registry/: __init__.py  models.py  repository.py  routes.py  service.py
services/admin/src/admin_service/collection_catalog/: __init__.py  models.py  repository.py  routes.py  service.py
services/admin/src/admin_service/document_ops/: __init__.py  models.py  routes.py  service.py
services/admin/src/admin_service/downstream_clients/: __init__.py  access_client.py  errors.py  indexing_client.py  publishing_worker_client.py  retrieval_client.py
services/admin/src/admin_service/identity/: models.py  repository.py  routes.py  service.py
services/admin/src/admin_service/ops_audit/: __init__.py  models.py  repository.py  routes.py  service.py
services/admin/src/admin_service/profile_registry/: __init__.py  models.py  repository.py  routes.py  service.py
services/admin/tests/: conftest.py  test_api_keys.py  test_audit.py  test_auth.py  test_auth_jwt.py  test_collections.py  test_document_ops.py  test_downstream_clients.py  test_profiles.py
services/indexing/: .env.example  AGENTS.md  README.md  api.md  indexing.md  live-model-config.md  pyproject.toml
services/indexing/src/indexing_service/: __init__.py  _compat.py  asset_bundle.py  backends.py  config.py  contracts.py  domain.py  events.py  governance_assets.py  main.py  metrics.py  parse_detection.py  parse_policy.py  parser_profiles.py  persistent_repository.py  preview_contracts.py  profile_validator.py  projection_store.py  ragflow_strategy.py  repository.py  security.py  trace_recorder.py  upstream_chunk_orchestrator.py  upstream_parser_config.py  vendor_table_es_metadata.py
services/indexing/src/indexing_service/chunkers/: __init__.py  layout_title_chunker.py
services/indexing/src/indexing_service/embedding/: __init__.py  vector_text_builder.py
services/indexing/src/indexing_service/jobs/: __init__.py  (+2 more)
services/indexing/tests/: conftest.py  test_backends.py  test_chunk_revision.py  test_index_job_runner.py  test_live_model_integration.py  test_model_config_normalization.py  test_parse_preview_api.py  test_parse_preview_runner.py  test_parse_snapshot_chunks_api.py  test_persistent_registry.py  test_profile_validator.py  test_publish_activation_e2e.py  test_upstream_chunk_orchestrator.py
services/intake-pipeline/: .env.example  AGENTS.md  INTAKE_PIPELINE_REMEDIATION_PLAN.md  api.md  intake-pipeline.md  pyproject.toml  对外关系总览.md
services/intake-pipeline/agent-review-worker/: pyproject.toml
services/intake-pipeline/agent-review-worker/tests/: test_review_main.py
services/intake-pipeline/approval-service/: approval-service.md  pyproject.toml
services/intake-pipeline/approval-service/tests/: test_approval_domain.py  test_approval_main.py  test_internal_apis.py
services/intake-pipeline/conversion-worker/: pyproject.toml
services/intake-pipeline/conversion-worker/tests/: test_conversion_main.py
services/intake-pipeline/docs/: stage-context-mapping.md
services/intake-pipeline/document-service/: document-service.md  pyproject.toml
services/intake-pipeline/document-service/tests/: conftest.py  test_document_main.py
services/intake-pipeline/indexing-service/: pyproject.toml
services/intake-pipeline/indexing-service/tests/: test_compat_root_guardrails.py  test_service_backends.py  test_service_main.py
services/intake-pipeline/ingestion-worker/: pyproject.toml
services/intake-pipeline/ingestion-worker/tests/: conftest.py  fake_converter.py  test_agent_review_cache.py  test_agent_reviewer.py  test_approval_service.py  test_document_domain.py  test_document_service_client.py  test_governance.py  test_health.py  test_indexing.py  test_indexing_backends.py  test_lease_service.py  test_main.py  test_markitdown_converter.py  test_orchestrator.py  test_orchestrator_lease.py  test_outbox_deliver.py  test_outbox_dispatcher.py  test_outbox_integration.py  test_phase6_missing_contracts.py  test_pipeline_telemetry.py  test_ragflow_converter.py  test_repo_guardrails.py  test_source_files.py  test_split_services_boundary.py  test_stage_runtime.py  test_stage_schemas.py
services/intake-pipeline/publishing-worker/: pyproject.toml
services/intake-pipeline/publishing-worker/tests/: test_publishing_domain.py  test_publishing_main.py
services/intake-pipeline/src/intake_pipeline/: __init__.py  _compat.py  indexing_command_gateway.py  lineage.py  main.py  publishing_facade.py  state_models.py
services/intake-pipeline/src/intake_runtime/: __init__.py  agent_review_cache.py  lease_service.py  orchestrator.py  pipeline_utils.py  publishing_persistence.py  quality_utils.py  stage_runtime.py  stage_task_worker.py
services/intake-pipeline/tests/: test_internal_apis.py
services/workbench-api/: .env.example  AGENTS.md  README.md  api.md  pyproject.toml  workbench-api.md
services/workbench-api/src/workbench_api/: __init__.py  config.py  database.py  deps.py  errors.py  main.py
services/workbench-api/tests/: conftest.py  test_agent_review.py  test_agent_review_matching.py  test_api_keys.py  test_approval_events.py  test_audit_logs.py  test_auth.py  test_chunk_edits.py  test_collection_detail.py  test_dashboard.py  test_document_management.py  test_document_projection.py  test_document_routes.py  test_document_share.py  test_notifications.py  test_parse_previews.py  test_parse_snapshots.py  test_parser_profiles.py  test_profiles_crud.py  test_task_cancel.py  test_task_projection.py  test_ticket_comments.py  test_ticket_transfer.py  test_tickets.py  test_trash.py  test_uploads.py  test_wb_chunk_revision.py  test_wire_drift_guard.py  test_workspace.py
(+794 files in other folders)
