[project]
name = "enterprise-knowledgebase"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "reality-rag-admin",
    "enterprise-kb-indexing",
    "reality-rag-intake-pipeline",
    "agent-review-worker",
    "approval-service",
    "conversion-worker",
    "document-service",
    "indexing-service",
    "ingestion-worker",
    "publishing-worker",
    "reality-rag-workbench",
    "reality-rag-contracts",
    "reality-rag-persistence",
    "reality-rag-documents",
    "intake-runtime",
    "ragflow-runtime",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "respx>=0.22",
    "jsonschema>=4.0",
]

[tool.uv.workspace]
members = [
    "services/admin",
    "services/indexing",
    "services/intake-pipeline",
    "services/intake-pipeline/agent-review-worker",
    "services/intake-pipeline/approval-service",
    "services/intake-pipeline/conversion-worker",
    "services/intake-pipeline/document-service",
    "services/intake-pipeline/indexing-service",
    "services/intake-pipeline/ingestion-worker",
    "services/intake-pipeline/publishing-worker",
    "services/workbench-api",
    "packages/contracts",
    "packages/persistence",
    "packages/documents",
    "packages/intake_runtime",
    "packages/ragflow_runtime",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[dependency-groups]
dev = [
    "huggingface-hub>=1.18.0",
    "jsonschema>=4.26.0",
    "olefile>=0.47",
    "pdfplumber>=0.11.9",
    "pyjwt>=2.13.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "quart>=0.20.0",
    "requests>=2.34.2",
    "respx>=0.23.1",
    "scikit-learn>=1.9.0",
    "xgboost>=3.2.0",
]

[tool.uv.sources]
reality-rag-admin = { workspace = true }
enterprise-kb-indexing = { workspace = true }
reality-rag-intake-pipeline = { workspace = true }
agent-review-worker = { workspace = true }
approval-service = { workspace = true }
conversion-worker = { workspace = true }
document-service = { workspace = true }
indexing-service = { workspace = true }
ingestion-worker = { workspace = true }
publishing-worker = { workspace = true }
reality-rag-workbench = { workspace = true }
reality-rag-contracts = { workspace = true }
reality-rag-persistence = { workspace = true }
reality-rag-documents = { workspace = true }
intake-runtime = { workspace = true }
ragflow-runtime = { workspace = true }

[tool.uv]
package = false
