[project]
name = "enterprise-kb-indexing"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13,<5",
    "chardet>=7.0,<8",
    "fastapi>=0.115,<1",
    "httpx>=0.28,<1",
    "markdown>=3.10,<4",
    "pydantic>=2.11,<3",
    "pypdf>=6.0,<7",
    "ragflow-runtime",
    "reality-rag-contracts",
    "reality-rag-persistence",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.sources]
reality-rag-contracts = { path = "../../packages/contracts" }
reality-rag-persistence = { path = "../../packages/persistence" }
ragflow-runtime = { path = "../../packages/ragflow_runtime" }

[tool.pytest.ini_options]
markers = [
    "live_model: tests that call real external model endpoints",
]
