[project]
name = "enterprise-kb-indexing"
version = "0.1.0"
description = "Document parsing, chunking and index building service"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "Enterprise KnowledgeBase Contributors"},
]
keywords = ["indexing", "parsing", "chunking", "knowledge-base"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "beautifulsoup4>=4.13,<5",
    "chardet>=7.0,<8",
    "fastapi>=0.115,<1",
    "httpx>=0.28,<1",
    "markdown>=3.10,<4",
    "pydantic>=2.11,<3",
    "pypdf>=6.0,<7",
    "uvicorn",
    "ragflow-runtime",
    "reality-rag-contracts",
    "reality-rag-persistence",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.sources]
reality-rag-contracts = { workspace = true }
reality-rag-persistence = { workspace = true }
ragflow-runtime = { workspace = true }

[tool.pytest.ini_options]
markers = [
    "live_model: tests that call real external model endpoints",
]
