[project]
name = "reality-rag-intake-pipeline"
version = "0.1.0"
requires-python = "==3.14.*"
dependencies = [
    "pydantic>=2.11,<3",
    "fastapi>=0.100",
    "httpx",
    "reality-rag-contracts",
    "reality-rag-persistence",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx",
]

[tool.uv.sources]
reality-rag-contracts = { path = "../../packages/contracts" }
reality-rag-persistence = { path = "../../packages/persistence" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
