[project]
name = "reality-rag-intake-pipeline"
version = "0.1.0"
description = "Document intake governance pipeline service"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "Enterprise KnowledgeBase Contributors"},
]
keywords = ["intake", "pipeline", "document-governance"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pydantic>=2.11,<3",
    "fastapi>=0.100",
    "httpx",
    "sqlalchemy>=2.0",
    "uvicorn",
    "reality-rag-contracts",
    "reality-rag-persistence",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx",
]

[tool.uv.sources]
reality-rag-contracts = { workspace = true }
reality-rag-persistence = { workspace = true }

[tool.setuptools.packages.find]
where = ["src"]


