[project]
name = "reality-rag-workbench"
version = "0.1.0"
description = "Document processing workbench for Reality-RAG Enterprise KnowledgeBase"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1",
    "httpx>=0.28,<1",
    "pydantic>=2.11,<3",
    "python-jose[cryptography]>=3.3,<4",
    "reality-rag-contracts",
    "reality-rag-persistence",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "strict"
