[project]
name = "conversion-worker"
version = "0.1.0"
description = "Standalone conversion worker for Reality-RAG"
requires-python = "==3.14.*"
dependencies = [
    "fastapi>=0.100",
    "uvicorn[standard]",
    "reality-rag-contracts",
    "reality-rag-persistence",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx",
]
