[project]
name = "document-service"
version = "0.1.0"
description = "Standalone document service for Reality-RAG"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "Enterprise KnowledgeBase Contributors"},
]
keywords = ["document-service", "knowledge-base"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.100",
    "httpx",
    "python-multipart",
    "uvicorn[standard]",
    "reality-rag-contracts",
    "reality-rag-persistence",
    "reality-rag-documents",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx",
]
