[project]
name = "indexing-service"
version = "0.1.0"
description = "Standalone indexing service for Reality-RAG"
requires-python = "==3.14.*"
dependencies = [
    "fastapi>=0.100",
    "uvicorn[standard]",
    "reality-rag-contracts",
    "reality-rag-persistence",
    "reality-rag-indexing",
    "httpx",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx",
]
