[project]
name = "ingestion-worker"
version = "0.1.0"
requires-python = "==3.14.*"
dependencies = [
    "fastapi>=0.100",
    "uvicorn[standard]",
    "markitdown",
    "reality-rag-ai-clients",
    "reality-rag-contracts",
    "reality-rag-indexing",
    "reality-rag-persistence",
    "httpx",
    "prometheus-client>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx",
]
