[project]
name = "ingestion-worker"
version = "0.1.0"
description = "Ingestion task orchestrator worker"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "Enterprise KnowledgeBase Contributors"},
]
keywords = ["ingestion", "orchestrator", "knowledge-base"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi\u003e=0.100",
    "uvicorn[standard]",
    "reality-rag-contracts",
    "enterprise-kb-indexing",
    "reality-rag-persistence",
    "reality-rag-documents",
    "intake-runtime",
    "httpx",
    "prometheus-client\u003e=0.20",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx",
]
